--- a/foo-thesis.bib
+++ b/foo-thesis.bib
@@ -887,3 +887,14 @@ year = {2015}
   month = {August},
   url = {http://graphics.cs.williams.edu/data}
 }
+
+@misc{persson::2013::practical,
+title = {Practical Clustered Deferred and Forward Shading},
+author = {Emil Persson and Ola Olsson},
+year = {2013},
+howpublished = {SIGGRAPH Course: Advances in Real-Time Rendering in Games},
+url = {http://s2013.siggraph.org/attendees/courses/session/advances-real-time-rendering-games-part-i},
+abstract = {Efficient and flexible lighting remains a challenge in modern game engines. Clustered Shading [Olsson et. al. 2012] is a new lighting technique that offers compelling advantages over previous methods such as Tiled Deferred and Forward+. It scales better with complex scenes, while also offering more flexibility and fewer hassles. It is a unified lighting solution that works well with transparency, MSAA, and custom material and lighting models, without requiring extra passes or even necessarily a pre-z pass.
+
+This session introduces the latest academic research on this technique, then reviews the adapted version of the technique that is currently in production at Avalanche Studios and the key differences between the implementations and their implications.},
+}
