--- a/chap-implementation.tex
+++ b/chap-implementation.tex
@@ -35,8 +35,10 @@
 
 \section{RSM Generation and VPL Sampling}
 \label{sec:impl:rsmAndVplSampling}
-- use the exact same code for RSM generation as for G-Buffer generation
-- re-use RSM as shadowmap
+- use the same code for RSM generation as for G-Buffer generation with only slight modifications:
+- don't use normalmaps as the triangle normals are sufficient
+- instead of individual texture lookups, we use the material's average color as diffuse color as suggested by \citet{hedman2016sequential} to avoid high-frequency color changes to affect the outcome.
+- we re-use RSM as shadowmap
     - usually, one might want to decouple this since they likely need different resolutions/cascading schemes etc. One could also render the RSM with a less detailed version of the scene. Since we had no culling and LOD implemented, we were bottlenecked on geometry complexity and chose to do this in one pass.
     - we use variance shadowmapping. so we add the variance buffer if we're rendering an RSM, and disable another buffer (non-face normals).
 
@@ -54,9 +56,7 @@
 - The geometry shader, which now recieves a small (tesselated) triangle, computes the point data
 - i.e. position: center of triangle, radius: distance of center to farthest triangle vertex, normal: the face normal taken from the original, non-tessellated triangle.
 
-- the geometry shader then calculates a random VPL ID. We used the point's position to seed the random number generator. This makes the ISMs temporally unstable when the geometry moves, but we couldn't find a stable seed.
-
-\todo[color=blue]{implement randomness based on barycentric coordinates}
+- the geometry shader then calculates a random VPL ID. We used the point's barycentric coordinate inside its triangle and the triangle's primitive ID to seed the random number generator, as both values are readily available and coherent between frames.
 
 - two approaches:
 
