--- a/foo-thesis.bib
+++ b/foo-thesis.bib
@@ -898,3 +898,23 @@ abstract = {Efficient and flexible lighting remains a challenge in modern game e
 
 This session introduces the latest academic research on this technique, then reviews the adapted version of the technique that is currently in production at Avalanche Studios and the key differences between the implementations and their implications.},
 }
+
+@article{Ritschel:2012:SAI:2283296.2283310,
+ author = {Ritschel, Tobias and Dachsbacher, Carsten and Grosch, Thorsten and Kautz, Jan},
+ title = {The State of the Art in Interactive Global Illumination},
+ journal = {Comput. Graph. Forum},
+ issue_date = {February 2012},
+ volume = {31},
+ number = {1},
+ month = feb,
+ year = {2012},
+ issn = {0167-7055},
+ pages = {160--188},
+ numpages = {29},
+ url = {http://dx.doi.org/10.1111/j.1467-8659.2012.02093.x},
+ doi = {10.1111/j.1467-8659.2012.02093.x},
+ acmid = {2283310},
+ publisher = {Elsevier North-Holland, Inc.},
+ address = {Amsterdam, The Netherlands, The Netherlands},
+ keywords = {Colour, shading, shadowing, and texture/Radiosity/Raytracing, I.3.7 [Computer Graphics]: Three-Dimensional Graphics and Realism:, global illumination, image synthesis, interactive rendering, photon mapping, radiosity, ray tracing, real-time rendering, volume rendering},
+} 
