--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -35,6 +35,10 @@
 \usepackage{cgsnotes}
 \usepackage{cgsparagraphclassification}
 
+\usepackage{outlines}
+\usepackage{enumitem}
+\setlist{itemsep=2pt,parsep=2pt}
+
 % Title page
 
 \logo{graphics/logo_black}
